--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+!.env.production
+
+# Embedded Git repositories
+chatcringe/
+cringechat/
+testchat/
+testchat2/
